[package]
name = "media-controller"
version = "0.2.1"
edition = "2021"
authors = ["Nuno David <email@ndavd.com>"]
license = "MIT"
description = "A setup agnostic media controller"
readme = ".github/README.md"
repository = "https://github.com/ndavd/media-controller"
exclude = [".github/workflows"]
categories = ["graphics", "visualization", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs2 = "0.4.3"
gtk = "0.18.1"
