[package]
name = "media-controller"
version = "0.2.1"
edition = "2021"
authors = ["Nuno David <email@ndavd.com>"]
license = "MIT"
description = "A setup agnostic media controller"
readme = ".github/README.md"
repository = "https://github.com/ndavd/media-controller"
exclude = [".github/workflows"]
categories = ["graphics", "visualization", "multimedia::audio"]

[features]
regular = ["gtk"]
wayland = ["gtk4", "gtk4-layer-shell"]

[dependencies]
fs2 = "0.4.3"
gtk = { version = "0.18.1", optional = true }
gtk4 = { version = "0.9.7", optional = true }
gtk4-layer-shell = { version = "0.5.0", optional = true }
